--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,19 @@
 cmake_minimum_required(VERSION 3.13)
+# Set build type to debug if not specified
+if (NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Debug)
+endif()
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
+set(IS_BENCHMARK_BUILD CMAKE_BUILD_TYPE STREQUAL "Benchmark")
+if (${IS_BENCHMARK_BUILD})
+    add_compile_definitions(_BENCHMARK)
+    set(CMAKE_PREFIX_PATH /home/nyoos/Documents/research/pir/seal-release-lib)
+elseif (CMAKE_BUILD_TYPE MATCHES Debug)
+    set(CMAKE_PREFIX_PATH /home/nyoos/Documents/research/pir/seal-debug-lib)
+endif ()
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(CMAKE_PREFIX_PATH /home/nyoos/Documents/research/pir/seal-debug-lib)
-set(CMAKE_BUILD_TYPE Debug)
 project(Onion-PIR)
-add_executable(Onion-PIR src/main.cpp src/client.cpp src/server.cpp src/pir.cpp src/utils.cpp)
+add_executable(Onion-PIR src/main.cpp src/client.cpp src/server.cpp src/pir.cpp src/utils.cpp src/external_prod.cpp)
 find_package(SEAL 4.1 REQUIRED)
 target_link_libraries(Onion-PIR SEAL::seal)
 target_include_directories(Onion-PIR PUBLIC src/includes)
